[project]
name = "desmos-music-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "Herobrine692",email = "portc082@hsd.k12.or.us"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pretty-midi (>=0.2.11,<0.3.0)",
    "pyperclip (>=1.11.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
